--- a/implementation/sutp/Cargo.toml
+++ b/implementation/sutp/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sutp"
 version = "0.1.0"
 authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 byteorder = "1.2.7"
