Add demo server and client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [workspace]
 members = [
     "implementation/sutp",
+    "implementation/sutp-demo-client",
+    "implementation/sutp-demo-server",
     "implementation/sutp-futures"
 ]
