--- a/implementation/sutp-demo-server/Cargo.toml
+++ b/implementation/sutp-demo-server/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+env_logger = "0.6.0"
 futures = "0.1.25"
 sutp = { path = "../sutp" }
 tokio = "0.1.13"
