--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
 language: rust
+
+before_script:
+  - rustup component add rustfmt
+
+script:
+  - cargo fmt --all -- --check
+  - cargo build
+  - cargo test --verbose
