Add echo server for easy cross-testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ members = [
     "implementation/sutp",
     "implementation/sutp-demo-client",
     "implementation/sutp-demo-server",
+    "implementation/sutp-echo-server",
     "implementation/sutp-futures"
 ]
